# SkiaUI2

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: feng.lrc  feng.srt  gl_transition_cross_zoom.glsl  gl_transition_window_slice.glsl  raining.glsl  raining.sksl  react_bundle.js  sincos.glsl  skia_nv12_fragment_shader.glsl  skia_video_black_white.glsl  skia_video_bright_shader.glsl  skia_video_lightning.glsl  skia_video_raining_shader.glsl  skia_yuv420p_camera_shader.glsl  skia_yuv420p_fragment_shader.glsl  test.js  vue_bundle.js
app/src/main/assets/materials/: baked_color.filamat
app/src/main/cpp/: SkiaUI.cpp  SkiaUIApp.cpp  SkiaUIApp.h  native-lib.cpp
app/src/main/cpp/anim/: AnimationResult.h  AnimatorSet.cpp  AnimatorSet.h  EaseType.h  IAnimator.cpp  IAnimator.h  LinearAnimator.cpp  LinearAnimator.h  RotateAnimator.cpp  RotateAnimator.h  TranslateAnimator.cpp  TranslateAnimator.h
app/src/main/cpp/app/: FrontEngineType.h  SkiaGLApp.cpp  SkiaGLApp.h  SkiaUIApp.cpp  SkiaUIApp.h  SkiaUIContext.h
app/src/main/cpp/base/: AndroidBitmap.cpp  AndroidBitmap.h  AssetManager.cpp  AssetManager.h  EGLCore.cpp  EGLCore.h  MeasureTime.h  bitmap_util.h  color_util.h  gl_utils.cpp  gl_utils.h  matrix_util.h  native_log.h  w3c_util.h
app/src/main/cpp/bitmap/: AndroidBitmap.cpp  AndroidBitmap.h  AndroidBitmapLoader.cpp  AndroidBitmapLoader.h
app/src/main/cpp/compose/: ComposeAndroidImageJNI.h  ComposeBaseSurfaceTextureJNI.h  ComposeButtonJNI.h  ComposeCameraJNI.h  ComposeCanvas.cpp  ComposeCanvas.h  ComposeCanvasJNI.h  ComposeCanvasPaintJNI.h  ComposeCanvasPathJNI.h  ComposeContext.h  ComposeEditTextJNI.h  ComposeExoVideoJNI.h  ComposeFilamentJNI.h  ComposeFlexboxLayoutJNI.h  ComposeIconJNI.h  ComposeImageJNI.h  ComposeJNI.h  ComposeLoadingViewJNI.h  ComposeLottieJNI.h  ComposeNodeJNI.h  ComposePageJNI.h  ComposeProgressBarJNI.h  ComposeRecyclerView.cpp  ComposeRecyclerView.h  ComposeRecyclerViewJNI.h  ComposeSVGJNI.h  ComposeScrollViewJNI.h  ComposeShaderJNI.h  ComposeSwitchJNI.h  ComposeTextJNI.h  ComposeVideoJNI.h  ComposeViewGroupJNI.h  ComposeViewJNI.h  ComposeWebJNI.h
app/src/main/cpp/custom/: AudioFFTView.cpp  AudioFFTView.h  LyricScrollView.cpp  LyricScrollView.h  LyricView.cpp  LyricView.h
app/src/main/cpp/filter/: GrAHardwareBufferUtils.cpp  GrAHardwareBufferUtils.h  IFilter.h  PersistentCache.cpp  PersistentCache.h  SkiaFilter.cpp  SkiaFilter.h
app/src/main/cpp/fliter/: IFilter.h  SkiaFilter.cpp  SkiaFilter.h
app/src/main/cpp/inspect/: Inspector.cpp  Inspector.h  V8InspctprChannelImpl.cpp  V8InspctprChannelImpl.h  V8InspectorClientImpl.cpp  V8InspectorClientImpl.h  V8InspectorListener.h  WebSocketServer.cpp  WebSocketServer.h  inspect_utils.h
app/src/main/cpp/js/: File.cpp  File.h  JSAudioPlayer.cpp  JSAudioPlayer.h  JSAudioPlayerBinding.cpp  JSAudioPlayerBinding.h  JSBinding.h  JSButtonBinding.cpp  JSButtonBinding.h  JSFileBinding.cpp  JSFileBinding.h  JSFlexboxLayoutBinding.cpp  JSFlexboxLayoutBinding.h  JSIconBinding.cpp  JSIconBinding.h  JSImageViewBinding.cpp  JSImageViewBinding.h  JSLinearAnimationBinding.cpp  JSLinearAnimationBinding.h  JSLottieViewBinding.cpp  JSLottieViewBinding.h  JSPageBinding.cpp  JSPageBinding.h  JSProgressBarBinding.cpp  JSProgressBarBinding.h  JSSVGViewBinding.cpp  JSSVGViewBinding.h  JSScrollViewBinding.cpp  JSScrollViewBinding.h  JSShaderViewBinding.cpp  JSShaderViewBinding.h  JSSwitchBinding.cpp  JSSwitchBinding.h  JSTextEncodingBinding.cpp  JSTextEncodingBinding.h  JSTextViewBinding.cpp  JSTextViewBinding.h  JSVideoViewBinding.cpp  JSVideoViewBinding.h  JSViewBinding.cpp  (+17 more)
app/src/main/cpp/page/: Page.cpp  Page.h  PageStackManager.cpp  PageStackManager.h
app/src/main/cpp/plugin/: IPlugin.cpp  IPlugin.h  PluginManager.cpp  PluginManager.h
app/src/main/cpp/resources/: ResourceLoader.cpp  ResourceLoader.h  ResourcesLoader.cpp  ResourcesLoader.h
app/src/main/cpp/test/: BlendTestPage.cpp  BlendTestPage.h  BlendTestView.cpp  BlendTestView.h  CameraPage.cpp  CameraPage.h  CameraPreviewImage.cpp  CameraPreviewImage.h  CanvasTest.cpp  CanvasTest.h  ClockView.cpp  ClockView.h  CppTest.cpp  CppTest.h  EasingTestPage.cpp  EasingTestPage.h  ExamplePage.cpp  ExamplePage.h  FilamentPage.cpp  FilamentPage.h  FlexboxLayoutTest.cpp  FlexboxLayoutTest.h  GradientCanvasTest.cpp  GradientCanvasTest.h  GridLayoutTest.cpp  GridLayoutTest.h  ITestDraw.h  JavascriptTest.cpp  JavascriptTest.h  JetpackComposeTest.cpp  JetpackComposeTest.h  ListViewTest.cpp  MatrixTestPage.cpp  MatrixTestPage.h  PageTest.cpp  PageTest.h  ProgressBarDrawTest.cpp  QQMusicPage.cpp  QQMusicPage.h  QQMusicTest.cpp  (+17 more)
app/src/main/cpp/touch/: OverScroller.cpp  OverScroller.h  ScrollDispatcher.cpp  ScrollDispatcher.h  TouchEvent.h  TouchEventDispatcher.cpp  TouchEventDispatcher.h  Velocity.h
app/src/main/cpp/widget/: AndroidImageView.cpp  AndroidImageView.h  BaseListAdapter.h  BaseListView.h  BaseSurfaceTextureView.cpp  BaseSurfaceTextureView.h  BoxDecoration.cpp  BoxDecoration.h  Button.cpp  Button.h  CameraView.cpp  CameraView.h  ComposeTextureView.cpp  ComposeTextureView.h  EditText.cpp  EditText.h  ExoPlayerView.cpp  ExoPlayerView.h  FilamentView.cpp  FilamentView.h  FlexboxLayout.cpp  FlexboxLayout.h  GridLayout.cpp  GridLayout.h  Icon.cpp  Icon.h  ImageView.cpp  ImageView.h  InputView.cpp  InputView.h  LayoutParams.cpp  LayoutParams.h  LoadingView.cpp  LoadingView.h  LottieView.cpp  LottieView.h  MeasureSpec.h  MovingArea.cpp  MovingArea.h  MovingView.cpp  (+37 more)
app/src/main/cpp/yoga/: YGEnums.cpp
app/src/main/java/com/temple/skiaui/: HYSkiaEngine.kt  HYSkiaExampleActivity.kt  HYSkiaSurfaceView.kt  (+6 more)
app/src/main/jniLibs/v8/include/: codecache-units.h  mkjso-units.h  v8-debug.h  v8-inspector.h  v8-internal.h  v8-jsaot.h  v8-platform.h  v8-profiler.h  v8-util.h  v8-version-string.h  v8-version.h  v8-vex.h  v8.h  v8config.h  xts.h
app/src/main/res/layout/: activity_example.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
(+159 files in other folders)
